[gd_scene load_steps=42 format=2]

[ext_resource path="res://espada.png" type="Texture" id=1]
[ext_resource path="res://Comida.png" type="Texture" id=2]
[ext_resource path="res://Ouro.png" type="Texture" id=3]
[ext_resource path="res://livros.png" type="Texture" id=4]
[ext_resource path="res://coroa.png" type="Texture" id=5]
[ext_resource path="res://labirinto.png" type="Texture" id=6]
[ext_resource path="res://reino.png" type="Texture" id=7]
[ext_resource path="res://Labirinto.gd" type="Script" id=8]
[ext_resource path="res://pergaminho.png" type="Texture" id=10]
[ext_resource path="res://classic_memesbruh03.ttf" type="DynamicFontData" id=11]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -1.15978, -138.817 )
b = Vector2( -1.15978, 3.33925 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 1025, 14 )
b = Vector2( 9, 12 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 891, -44.0001 )
b = Vector2( 892, 18.9999 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 886, 141 )
b = Vector2( 883, 538 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 889, 538 )
b = Vector2( -128, 538 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -126, 537 )
b = Vector2( -126, 357 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -69.3935, -230.169 )
b = Vector2( -193.103, -230.169 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -101.867, -173.402 )
b = Vector2( -103.414, -12.1644 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( -34.9867, -140.01 )
b = Vector2( -99.5478, -139.056 )

[sub_resource type="SegmentShape2D" id=10]
a = Vector2( 91.8158, -93.2603 )
b = Vector2( -29.5744, -93.7373 )

[sub_resource type="SegmentShape2D" id=11]
a = Vector2( 22.2291, -98.0306 )
b = Vector2( 23.7755, -288.844 )

[sub_resource type="SegmentShape2D" id=12]
a = Vector2( 198.516, -184.374 )
b = Vector2( 85.6304, -182.466 )

[sub_resource type="SegmentShape2D" id=13]
a = Vector2( 138.594, -101.847 )
b = Vector2( 138.207, -14.5496 )

[sub_resource type="SegmentShape2D" id=29]
a = Vector2( -192.717, -207.272 )
b = Vector2( -192.717, -96.5997 )

[sub_resource type="CircleShape2D" id=15]
radius = 7.35609

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 23, 17 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 18, 24.25 )

[sub_resource type="GDScript" id=20]
script/source = "extends KinematicBody2D

"

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 39.5, 25 )

[sub_resource type="Curve2D" id=25]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 281, 549, 0, 0, 0, 0, 714, 477 )
}

[sub_resource type="CapsuleShape2D" id=26]
radius = 19.1229
height = 118.291

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 73.375, 17 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 17, 45.25 )

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=31]
default_font = SubResource( 30 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=24]
default_font = SubResource( 23 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 21 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Reino" type="Sprite" parent="."]
position = Vector2( 515.625, 288.5 )
scale = Vector2( 1.90829, 1.36853 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Labirinto" type="Sprite" parent="."]
position = Vector2( 506.5, 623.5 )
scale = Vector2( 2.5867, 2.09628 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Labirinto"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
position = Vector2( -191.17, -151.459 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
position = Vector2( -195.809, -297.431 )
scale = Vector2( 0.386593, 0.477035 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
position = Vector2( -144.779, -269.763 )
scale = Vector2( 0.386593, 0.477035 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
position = Vector2( -144.779, -269.763 )
scale = Vector2( 0.386593, 0.477035 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
position = Vector2( -144.779, -269.763 )
scale = Vector2( 0.386593, 0.477035 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
position = Vector2( -144.779, -269.763 )
scale = Vector2( 0.386593, 0.477035 )
shape = SubResource( 6 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 7 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 8 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 9 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 10 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 11 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 12 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 13 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Labirinto/StaticBody2D"]
shape = SubResource( 29 )

[node name="Comida" type="Area2D" parent="."]
position = Vector2( 506.5, 623.5 )
scale = Vector2( 2.5867, 2.09628 )

[node name="Comida" type="Sprite" parent="Comida"]
position = Vector2( -145.166, -37.4473 )
scale = Vector2( 0.247849, 0.289932 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Comida"]
position = Vector2( -144.392, -41.7406 )
shape = SubResource( 15 )

[node name="Ouro" type="Area2D" parent="."]

[node name="Ouro" type="Sprite" parent="Ouro"]
position = Vector2( 71, 72 )
scale = Vector2( 0.218836, 0.200035 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ouro"]
position = Vector2( 73, 82 )
shape = SubResource( 16 )

[node name="Livros" type="Area2D" parent="."]

[node name="Livros" type="Sprite" parent="Livros"]
position = Vector2( 940, 525 )
scale = Vector2( 0.259719, 0.22794 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Livros"]
position = Vector2( 934, 538.25 )
shape = SubResource( 17 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = SubResource( 20 )

[node name="Coroa" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 83.9988, 365.001 )
scale = Vector2( 0.680946, 0.587357 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 83.5, 365 )
shape = SubResource( 14 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 25 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 714, 477 )
offset = 439.431
rotate = false

[node name="KinematicBody2D" type="Area2D" parent="Path2D/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/KinematicBody2D"]
position = Vector2( 57.9999, 3 )
rotation = 1.36834
shape = SubResource( 26 )

[node name="Espada" type="Sprite" parent="Path2D/PathFollow2D/KinematicBody2D"]
position = Vector2( 59, 0 )
rotation = 0.656244
scale = Vector2( 0.289231, 0.281585 )
texture = ExtResource( 1 )

[node name="Passou_batalha" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Passou_batalha"]
position = Vector2( 790.625, 406 )
shape = SubResource( 27 )

[node name="Ganhou" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ganhou"]
position = Vector2( 1007, 134.25 )
shape = SubResource( 28 )

[node name="Intrucao" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 34.0
margin_top = 168.0
margin_right = 98.0
margin_bottom = 221.0
rect_scale = Vector2( 3, 3 )
theme = SubResource( 31 )
text = "Utilize 
W,A,S,D 
para se 
mover"

[node name="Pergaminho" type="Sprite" parent="."]
position = Vector2( 507, 308 )
scale = Vector2( 1.95896, 1.22532 )
texture = ExtResource( 10 )

[node name="livros" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 204.0
margin_top = 125.0
margin_right = 477.0
margin_bottom = 255.0
rect_scale = Vector2( 2.5, 2.5 )
theme = SubResource( 24 )
text = "    Parabéns!
    Agora há escolas e centros de 
	   pesquisa no reino, nesses 
	  locais será poss´ível elaborar 
	  uma forma de acabar com as 
	 moscas. Entretanto há poucos 
	livros no reino, o que limita os
	estudos. 
	   	             Pressione enter"

[node name="Ganha_batalha" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 204.0
margin_top = 125.0
margin_right = 477.0
margin_bottom = 255.0
rect_scale = Vector2( 2.5, 2.5 )
theme = SubResource( 24 )
text = "    Parabéns!
    Você superou as guerras e 
	   conflitos que iniciaram contra 
	   o reino. Porém o reino tem
	   diversos problemas gerados 
	  pelas batalhas, como casas 
	 destruídas.
		   	             Pressione enter"

[node name="Perde_batalha" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 190.0
margin_top = 169.0
margin_right = 463.0
margin_bottom = 299.0
rect_scale = Vector2( 2.5, 2.5 )
theme = SubResource( 24 )
text = "			    As guerras e conflitos levaram
				    o reino de Goulart para as 
					    ruínas, o povo esta perdido.
					   Ajude Goulart a reestruturar 
					  seu reino.  
						   	             Pressione enter"

[node name="ouro" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 222.0
margin_top = 121.0
margin_right = 502.0
margin_bottom = 245.0
rect_scale = Vector2( 2.4, 2.4 )
theme = SubResource( 22 )
text = "   Parabéns! 
   O reino de Goulart quase foi 
   para as ruínas, mas você achou
  uma mina de ouro, o que resolveu 
  os problemas dos fundos reais. 
 Entretanto, reinos próximos e 
bárbaros souberam da notícia e 
querem seu ouro.
	   	             Pressione enter"

[node name="comida" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 258.0
margin_top = 162.0
margin_right = 581.0
margin_bottom = 271.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 19 )
text = "   Parabéns!
   Graças a você o reino de
  Goulart tem comida, entretanto
  a comida foi adquirida em
 excesso, o que gerou uma quebra 
nos bancos reais e a comida que 
sobrou apodreceu, o que 
causou uma infestaçáo de moscas.
	   	             Pressione enter"

[connection signal="body_entered" from="Comida" to="." method="_on_Comida_body_entered"]
[connection signal="body_entered" from="Ouro" to="." method="_on_Ouro_body_entered"]
[connection signal="body_entered" from="Livros" to="." method="_on_Livros_body_entered"]
[connection signal="body_entered" from="Path2D/PathFollow2D/KinematicBody2D" to="." method="_on_KinematicBody2D_body_entered"]
[connection signal="body_exited" from="Passou_batalha" to="." method="_on_Passou_batalha_body_exited"]
[connection signal="body_entered" from="Ganhou" to="." method="_on_Ganhou_body_entered"]
